--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "vite-plugin-vue2": "^1.9.0"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "echarts": "^5.2.2",
     "element-ui": "^2.15.6",
+    "js-cookie": "^3.0.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "screenfull": "^6.0.0",
     "vue": "2.6.14",
-    "vue-template-compiler": "^2.6.14"
+    "vue-count-to": "^1.0.13",
+    "vue-router": "^3.5.3",
+    "vue-template-compiler": "^2.6.14",
+    "vuex": "^3.6.2"
   }
 }
