--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "path-browserify": "^1.0.1",
     "screenfull": "^6.0.0",
     "vue": "2.6.14",
     "vue-count-to": "^1.0.13",
