--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # public path
 VITE_PUBLIC_PATH = /
-VUE_APP_BASE_API  = http://42.194.194.178:3000
+VITE_APP_BASE_API  = http://42.194.194.178:3000
